Fixed align of converter buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ button {
   height: 50px;
   border-radius: 5px;
   border: 0;
+  align-items: center;
 }
 
 .option-tile {
